Bug 235863 - Repetition count ignored in Vi-input mode
Summary: Repetition count ignored in Vi-input mode
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: Vi Input Mode (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-01 00:36 UTC by Matthijs
Modified: 2010-05-26 19:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthijs 2010-05-01 00:36:46 UTC
Version:           3.4.2 (using 4.4.2 (KDE 4.4.2), Arch Linux)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.33-ARCH

The vi-input mode ignores the repetition count when the previous command had a status report.

Steps to reproduce:
 - Do something to display a status report (eg save, substitute)
 - Type a number (eg 5)
 - Type a substitute command (:s...)

Expected result:
Kate says ".,.+4s..."
But instead, kate swallows the repetition count, leaving only "s..."

Using escape to close the status report does not resolve the issue.
Comment 1 Matthijs 2010-05-25 10:00:11 UTC
Is this bug going to be fixed in KDE SC 4.5?
Comment 2 Erlend Hamberg 2010-05-25 11:26:02 UTC
i haven't gotten around to fixing it yet, unfortunately, so it does not look like it will be in 4.5.0. however, the investigation led to a quite stupid bug being found: the range (a,b+c) (for example “.,.+5” would always be evaluated to the range (a,b+b) :-P

i can reproduce the bug, btw. i will try to have a look at it after i'm done with my exams 8 june.
Comment 3 Christoph Cullmann 2010-05-26 19:04:46 UTC
SVN commit 1130880 by cullmann:

ehamberg:
    set command line text after opening command line.
    
BUG: 235863


 M  +2 -1      katevinormalmode.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1130880