ehamberg:     set command line text after opening command line.

BUG: 235863

svn path=/trunk/KDE/kdelibs/kate/; revision=1130880